fixed whitespace on the side of the page

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,7 +3,7 @@
     color: cornflowerblue;
     text-align: center;
     padding-top: 200px;
-    padding-bottom: 400px;
+    padding-bottom: 300px;
     margin: auto;
     
 }
