--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,8 @@
     display: block;
     letter-spacing: 2px;
     padding-top: 100px;
-    padding-bottom: 150px;
+    padding-bottom: 120px;
     margin: auto;
-    
+    max-width: auto;
+
 }
